# azure-ai-foundry-mcp

./: LICENSE  README.md  pyproject.toml
azure_agent_mcp_server/: __init__.py  __main__.py
