[project]
name = "azure-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-ai-projects==1.0.0b10",
    "azure-identity>=1.22.0",
    "fastmcp>=2.3.4",
    "python-dotenv>=1.1.0",
]
